<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Pluroium Development Team.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Pluroium2SMS</string>
    
    <string name="plurk">Plurk</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="loading">Loading...</string>
    
    <!-- headers -->
    <string name="header_login">Pluroium2SMS - Login</string>
    <string name="header_all">Pluroium2SMS- All plurks</string>
    <string name="header_compose">Pluroium2SMS - Compose a plurk</string>
    <string name="header_sharephoto">Pluroium2SMS - Share a photo</string>
    <string name="description_refresh">Refresh</string>
    
    <!-- LaunchActivity -->
    <string name="login_name_title">Username or Email:</string>
    <string name="login_password_title">Password:</string>
    <string name="login_remember_title">Remember</string>
    <string name="login_button_text">Login</string>
    <string name="loging_button_text">Logging in...</string>
    <string name="not_member_text">Don\'t have a plurk account?</string>
    <string name="signup_button_text">Sign up</string>
    <string name="login_fail_dialog_title">Login failed</string>
    <string name="login_fail_message">Please check if the username/password you inputed are correct.</string>
    
    <!-- PlurkActivity -->
    <string name="plurk_button_text">Plurk</string>
    <string name="plurk_text_hint">What are you doing?</string>
    <string name="plurk_qualifier_label">Select a qualifier</string>
    <string name="plurking">Plurking...</string>
    
    <string name="menu_view">View...</string>
    <string name="menu_upload_photo_title">Upload photo</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_view_user_title">Go to user...</string>
    <string name="menu_preferences_title">Settings</string>
    <string name="menu_logout">Log out</string>
    
    <string name="context_menu_read_title">Plurk 2 SMS</string>
    <string name="context_menu_author_title">View author info...</string>
    <string name="context_menu_favorite_title">Mark as favorite</string>
    <string name="context_menu_unfavorite_title">Mark as unfavorite</string>
    <string name="context_menu_mute_title">Mute</string>
    <string name="context_menu_unmute_title">Unmute</string>
    <string name="context_menu_edit_title">Edit</string>
    <string name="context_menu_delete_title">Delete</string>

    <string name="plurk_list_more_title">Click to load more</string>
    <string name="plurk_list_loading_title">Loading plurks...</string>
    
    <string name="dialog_logout_confirm_title">Log out Plurk</string>
    <string name="dialog_logout_confirm_message">Are you sure to log out plurk?</string>
    
    <string name="dialog_switch_view_title">Switch to...</string>
    <string name="list_item_responses">responses</string>
    <string name="list_item_favorites">favs</string>
    
    <!-- Preferences -->
    <string name="pref_cat_general">General</string>
    <string name="pref_load_avatar_title">Load Avatar</string>
    <string name="pref_time_zone_title">Time Zone</string>
    <string name="pref_time_zone_summary">Select your preference timezone</string>
    <string name="pref_refresh_title">Refresh</string>
    <string name="pref_refresh_summary">Automatically update plurks</string>    
    <string name="pref_refresh_interval_title">Refresh interval</string>
    <string name="pref_refresh_interval_summary">How long will Pluroid update plurks</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Show notification on updates</string>
    <string name="pref_notify_vibrate_title">Vibrate</string>
    <string name="pref_notify_vibrate_summary">Vibrate on incoming notification</string>    
    <string name="pref_notify_led_title">Phone LED</string>
    <string name="pref_notify_led_summary">Flash LED on incoming notification</string>
    
    <string name="pref_cat_upload">Photo upload</string>
    <string name="pref_upload_provider_title">Photo sharing host</string>
    <string name="pref_upload_provider_summary">Select a host to upload photos</string>
    <string name="pref_upload_resize_title">Resize photo</string>
    <string name="pref_upload_resize_summary">Which size of photo will be uploaded</string>
    <string name="pref_resize_dialog_title">Choose a size for uploading photos</string>

    <string name="pref_cat_misc">Misc.</string>
    <string name="pref_use_external_title">Store cache on SD card</string>
    <string name="pref_use_external_summary">Use SD card to store caches.</string>
    
    <!-- SharedPhoto -->
    <string name="upload_photo_title">Upload to Plurk:</string>
    <string name="upload_photo_text_hint">Add description...</string>
    <string name="upload_start_msg">Starting to upload the photo...</string>
    
    <string name="upload_photo_notify_start">Uploading photo, please wait...</string>
    <string name="upload_photo_notify_done">Uploading photo done.</string>
    
    <!-- SinglePlurk -->
    <string name="single_responses_title"> responses</string>
    <string name="respond">Respond</string>
    <string name="respoding">Responding...</string>
    <string name="click_to_comment">Click to comment...</string>
    
    <!-- Compose -->
    <string name="compose_title">Compose</string>
    <string name="compose_camera_options_title">Insert a photo from:</string>
    <string name="compose_location_options_title">Insert a location:</string>
    <string name="compose_emotion_dialog_title">Insert a emotion:</string>
    <string name="compose_uploading_message">Uploading photo...</string>
    <string name="compose_locating_message">Determining current location...</string>
    <string name="location_pick_title">Use this location</string>
    
</resources>