<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/launch_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:background="@drawable/launch_bg"
        android:padding="6dip">
    
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />
  
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dip"
        android:paddingTop="0dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
      
        <TextView android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name_title" />

        <EditText android:id="@+id/login_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    
        <TextView android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_marginTop="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password_title"/>

        <EditText android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:imeOptions="actionSend"
            android:inputType="textPassword" />
    
        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            
            <CheckBox android:id="@+id/login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dip"
                android:text="@string/login_remember_title" />
            
            <Button android:id="@+id/login_button"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text" />
        </LinearLayout>
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#ffbbbbbb" />
            
</LinearLayout>