<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <!-- UI Header -->
    <LinearLayout android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:layout_width="fill_parent" 
            android:layout_height="?android:attr/windowTitleSize"
            android:background="#cf682f"
            android:paddingLeft="5dip">
        
            <TextView android:id="@+id/page_title" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                style="?android:attr/windowTitleStyle"
                android:fadingEdge="horizontal"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/header_compose" />
                
            <ProgressBar android:id="@+id/load_progressing" 
                style="?android:attr/progressBarStyleSmall"
                android:visibility="gone"
                android:max="10000"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="3dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        
        </RelativeLayout>
        
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark" />
                        
    </LinearLayout>
    
    
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    
        <!-- 底下的按鈕 -->
        <LinearLayout android:id="@+id/compose_bottom_container"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingBottom="1dip"
            android:background="@android:drawable/bottom_bar"
            android:layout_alignParentBottom="true">
                
            <Button android:id="@+id/compose_plurk_button"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plurk" />
                
            <Button android:id="@+id/compose_cancel_button"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
        
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_above="@id/compose_bottom_container"
            android:padding="5dip">
            
            <Spinner android:id="@+id/compose_qualifier"
               style="?android:attr/textAppearanceMedium"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:drawSelectorOnTop="true"
               android:prompt="@string/plurk_qualifier_label"
               android:entries="@array/qualifiers" />
                 
            <EditText android:id="@+id/compose_content"
                android:layout_width="fill_parent"
                android:layout_height="220dip"
                android:hint="@string/plurk_text_hint"
                android:gravity="top" />
        
            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
            
                <ImageButton android:id="@+id/compose_emotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu_emoticons" />    
                
            </LinearLayout>
        
        </LinearLayout>
    
    </RelativeLayout>
    
</LinearLayout>