<?xml version="1.0" encoding="utf-8" ?>
<!-- Copyright (C) 2011 The Pluroium Development Team.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <RelativeLayout
        android:layout_width="fill_parent" 
        android:layout_height="?android:attr/windowTitleSize"
        android:background="#cf682f"
        android:paddingLeft="5dip">
    
        <TextView android:id="@+id/page_title" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            style="?android:attr/windowTitleStyle"
            android:fadingEdge="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/header_sharephoto" />
            
        <ProgressBar android:id="@+id/load_progressing" 
            style="?android:attr/progressBarStyleSmall"
            android:visibility="gone"
            android:max="10000"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    </RelativeLayout>
    
    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:drawable/divider_horizontal_dark" />
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_photo_title" 
        android:paddingBottom="3dip" 
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="3dip" />
        
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <!-- 底下的按鈕 -->
        <LinearLayout android:id="@+id/shared_photo_bottom_container"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingBottom="1dip"
            android:background="@android:drawable/bottom_bar"
            android:layout_alignParentBottom="true">
            
            
                
            <Button android:id="@+id/shared_photo_upload_button"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/upload" />
                
            <Button android:id="@+id/shared_photo_cancel_button"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
        
        <LinearLayout android:id="@+id/shared_photo_container"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_above="@id/shared_photo_bottom_container"
            android:layout_alignParentTop="true" android:paddingBottom="1dip" android:paddingLeft="5dip" android:paddingRight="5dip" android:paddingTop="4dip">
            
            <LinearLayout android:id="@+id/share_photo_image_container"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="3"
                android:layout_gravity="center_vertical|center_horizontal" 
                android:padding="5dip">
            
                <ImageView android:id="@+id/shared_photo" 
		            android:layout_gravity="center_horizontal"
		            android:layout_marginBottom="5dip" 
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content" />
            
            </LinearLayout>
            
            <EditText android:id="@+id/shared_photo_text" 
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="2" 
                android:hint="@string/upload_photo_text_hint"
                android:gravity="top" />
        
        </LinearLayout>
	    
    </RelativeLayout>
</LinearLayout>