<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- UI Header -->
    <RelativeLayout android:id="@+id/single_plurk_header"
        android:layout_width="fill_parent" 
        android:layout_height="?android:attr/windowTitleSize"
        android:background="#cf682f"
        android:paddingLeft="5dip"
        android:layout_alignParentTop="true">
    
        <TextView android:id="@+id/single_page_title" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            style="?android:attr/windowTitleStyle"
            android:fadingEdge="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="Pluroid" />
            
        <ProgressBar android:id="@+id/single_load_progressing" 
            style="?android:attr/progressBarStyleSmall"
            android:visibility="gone"
            android:max="10000"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    </RelativeLayout>
    
    <View android:id="@+id/single_plurk_divider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/single_plurk_header"
        android:background="@android:drawable/divider_horizontal_dark" />

    <LinearLayout android:id="@+id/single_plurk_bottom_container"
        android:orientation="vertical"
            android:paddingTop="5dip"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:paddingBottom="1dip"
        android:background="@android:drawable/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
            
            <Spinner android:id="@+id/single_plurk_response_qualifier"
               android:layout_alignParentLeft="true"
               style="?android:attr/textAppearanceMedium"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:drawSelectorOnTop="true"
               android:prompt="@string/plurk_qualifier_label"
               android:entries="@array/qualifiers" />
            
            <EditText android:id="@+id/single_plurk_response_text"
                android:layout_alignParentRight="true"
	              android:layout_width="0dip"
	              android:layout_weight="1"
	              android:layout_toRightOf="@id/single_plurk_response_qualifier"
	              android:layout_height="wrap_content"
	              android:hint="Click to comment..."
	              android:nextFocusUp="@id/single_plurk_response_text"
                android:nextFocusLeft="@id/single_plurk_response_text" />
        
        </RelativeLayout>
        
        <!-- 底下的按鈕 -->
        <LinearLayout android:id="@+id/single_plurk_buttons"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone">

            <Button android:id="@+id/single_plurk_post_button"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/respond" />
                
            <Button android:id="@+id/single_plurk_cancel_button"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>    
    
    </LinearLayout>

    <ListView android:id="@+id/plurk_responses"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_below="@id/single_plurk_divider"
        android:layout_above="@id/single_plurk_bottom_container" />

</RelativeLayout>